--- a/docker-compose-v2alejo.yml
+++ b/docker-compose-v2alejo.yml
@@ -94,23 +94,34 @@ services:
     ports:
       - "5432:5432"
 
-  # huedb:
-  #   image: postgres:12.1-alpine
-  #   volumes:
-  #     - pg_data:/var/lib/postgresl/data/
-  #   ports:
-  #     - "5432"
-  #   env_file:
-  #     - ./hadoop-hive.env
-  #   environment:
-  #       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 hive-metastore-postgresql:5432 resourcemanager:8088 hive-metastore:9083"
-  # hue:
-  #   image: gethue/hue:4.6.0
-  #   environment:
-  #       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 hive-metastore-postgresql:5432 resourcemanager:8088 hive-metastore:9083 huedb:5000"
-  #   ports:
-  #     - "8888:8888"
-  #   volumes:
-  #     - ./hue-overrides.ini:/usr/share/hue/desktop/conf/hue-overrides.ini
-  #   links:
-  #     - huedb
+  huedb:
+    image: postgres:12.1-alpine
+    volumes:
+      - pg_data:/var/lib/postgresl/data/
+    ports:
+      - "5432"
+    env_file:
+      - ./hadoop-hive.env
+    environment:
+        SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 hive-metastore-postgresql:5432 resourcemanager:8088 hive-metastore:9083"
+  
+  hue:
+    image: gethue/hue:4.6.0
+    environment:
+        SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 hive-metastore-postgresql:5432 resourcemanager:8088 hive-metastore:9083 huedb:5000"
+    ports:
+      - "8888:8888"
+    volumes:
+      - ./hue-overrides.ini:/usr/share/hue/desktop/conf/hue-overrides.ini
+    links:
+      - huedb
+
+volumes:
+  hadoop_namenode:
+  hadoop_datasets:
+  hadoop_datanode:
+  hadoop_historyserver:
+  hive_scripts:
+  pg_data:
+
+  
